fixing data format

--- a/README.Rmd
+++ b/README.Rmd
@@ -99,6 +99,7 @@ defineResponseGroups(), runDiffExpr(), plotGeneBoxplot(), plotDoseResponse(),
 and loadPSet().
 
 The following packages were used in development:
+
 - **PharmacoGx** (Smirnov et al., 2016) for PharmacoSet data structure and accessor functions
 - **SummarizedExperiment** (Morgan et al., 2024) for handling expression data and molecular profiles
 - **ggplot2** (Wickham, 2016) for visualization functions
@@ -113,9 +114,7 @@ The following packages were used in development:
 - **BiocManager** (Morgan & Ramos, 2025) for package management
 
 [If you used AI tools:]
-Generative AI tools were used as follows:
-- ChatGPT and Claude were consulted for debugging errors found within the correlateExpressionAUC() 
-  function and shiny app. The AI-suggested solutions were reviewed and adapted to fit the package design.
+Generative AI tools were used as follows: ChatGPT and Claude were consulted for debugging errors found within the correlateExpressionAUC() function and shiny app. The AI-suggested solutions were reviewed and adapted to fit the package design.
 
 ## References
 Allaire J, Xie Y, Dervieux C, McPherson J, Luraschi J, Ushey K, Atkins A, Wickham H, Cheng J, Chang W, Iannone R
